--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,13 +1,18 @@
 doctype html
 html
   head
-    title Bootstrap on Rails
-
-    /[if lt IE 9]
-      script src='http://html5shiv.googlecode.com/svn/trunk/html5.js'
-    = stylesheet_link_tag    "application"
-    = javascript_include_tag 'application'
+    title Bootstrap on Rails with Mobile
     = csrf_meta_tag
+
+    -if mobile_device?
+      /= stylesheet_link_tag 'mobile' 
+      /= stylesheet_link_tag 'jquery.mobile-1.0.min'
+    -else
+      /[if lt IE 9]
+        script src='http://html5shiv.googlecode.com/svn/trunk/html5.js'
+      = stylesheet_link_tag    "application"
+      = javascript_include_tag 'application'
+    end
 
     javascript:
       var session_key      = '#{cookies[Rails.application.config.session_options[:key]]}';
@@ -16,6 +21,11 @@ html
 
   body class=("#{controller.controller_name} #{controller.controller_name}-#{params[:action]}") 
     
+    /-if mobile_device?
+    /  = link_to "Full Site", :mobile => 0
+    /-else
+    /  = link_to "Mobile Site", :mobile => 1
+
     /.div class=("background_grid" if grid_is_on?)
     = render "shared/top_menu"
     = yield
