--- a/app/views/home/index.mobile.erb
+++ b/app/views/home/index.mobile.erb
@@ -6,7 +6,7 @@
 	<title>jQuery Mobile: Demos and Documentation</title>
 	
 	<%= stylesheet_link_tag 'jquery.mobile-1.0.min.css' %>
-	<%= stylesheet_link_tag 'jqm-docs' %>
+	<%= stylesheet_link_tag 'jqm-docs.css' %>
 	
 		
 	<%= javascript_include_tag 'jquery' %>
