--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -5,16 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>jQuery Mobile: Demos and Documentation</title>
 	
-	<%= stylesheet_link_tag 'jquery.mobile-1.0.css' %>
-	<%= stylesheet_link_tag 'jqm-docs.css' %>
-	
+	<%= stylesheet_link_tag 'jquery-mobile-1.0' %>
+	<%= stylesheet_link_tag 'jqm-docs' %>
+	<%#= javascript_include_tag 'jquery' %>
+	<%#= javascript_include_tag 'jquery.mobile.themeswitcher' %>
+	<%#= javascript_include_tag 'jqm-docs' %>
+	<%#= javascript_include_tag 'jquery.mobile-1.0.min' %>
 		
-	<%= javascript_include_tag 'jquery' %>
-	<%= javascript_include_tag 'jquery.mobile.themeswitcher' %>
-	<%= javascript_include_tag 'jqm-docs' %>
-	<%= javascript_include_tag 'jquery.mobile-1.0.min' %>
-		
-
+	<%#= stylesheet_link_tag    "application"%>
+  <%= javascript_include_tag 'application'%>
 	
 </head>
 
