jquery mobile added

--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -7,13 +7,7 @@
 	
 	<%= stylesheet_link_tag 'jquery-mobile-1.0' %>
 	<%= stylesheet_link_tag 'jqm-docs' %>
-	<%#= javascript_include_tag 'jquery' %>
-	<%#= javascript_include_tag 'jquery.mobile.themeswitcher' %>
-	<%#= javascript_include_tag 'jqm-docs' %>
-	<%#= javascript_include_tag 'jquery.mobile-1.0.min' %>
-		
-	<%#= stylesheet_link_tag    "application"%>
-  <%= javascript_include_tag 'application'%>
+  <%= javascript_include_tag 'mobile'%>
 	
 </head>
 
