--- a/app/views/posts/index.mobile.slim
+++ b/app/views/posts/index.mobile.slim
@@ -1,21 +1,38 @@
-h1 Listing posts
+.type-home data-role="page"
 
-table
-  tr
-    th Title
-    th Body
-    th
-    th
-    th
+  .foo data-role="header"
+    h1 Bootstrap with jQuery Mobile
+  
+  
+  .foo data-role="content"
+    .content-secondary
+      #jqm-homeheader
+        h1 id="jqm-logo"
+          =image_tag('jquery-logo.png')
+      p Posts
+      p class='intro'
+        strong Test list. &nbsp;
+        'Manage lists
 
-  - @posts.each do |post|
-    tr
-      td= post.title
-      td= post.body
-      td= link_to 'Show', post
-      td= link_to 'Edit', edit_post_path(post)
-      td= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete
+        
+        
 
-br
+    .content-primary
+      ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="f"
+        li data-role="list-divider"
+          'Posts
+        - @posts.each do |post|
+            li class="post" = link_to post.title, post
+              /= post.title
+              /= post.body
+              /= link_to '', post
+              /= link_to 'Edit', edit_post_path(post)
+              /= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete
+
+      = link_to 'New Post', new_post_path, :"data-role"=>"button"
+        
+
 
 = link_to 'New Post', new_post_path
+
+
