--- a/app/views/posts/new.mobile.slim
+++ b/app/views/posts/new.mobile.slim
@@ -1,5 +1,13 @@
-h1 New post
+.type-home data-role="page"
 
-= render 'form'
-
-= link_to 'Back', posts_path
+  .foo data-role="header"
+    h1 New Post
+  
+  
+  .foo data-role="content"
+    .content-secondary
+      #jqm-homeheader
+        h1 Create post
+      p Pixels on rails
+    .content-primary
+      = render 'form'
