layout on users

--- a/app/views/posts/index.mobile.slim
+++ b/app/views/posts/index.mobile.slim
@@ -1,7 +1,8 @@
 .type-home data-role="page"
 
   .foo data-role="header"
-    h1 Bootstrap with jQuery Mobile
+    h1 Posts
+    = link_to 'home', root_path
   
   
   .foo data-role="content"
