--- a/app/views/home/index.mobile.slim
+++ b/app/views/home/index.mobile.slim
@@ -22,5 +22,6 @@
         - else
           li =link_to 'Log in', log_in_path
         li =link_to 'Posts', posts_path
+        li =link_to 'Users', users_path
 
     .content-primary
