default large avatar

--- a/app/views/users/index.mobile.slim
+++ b/app/views/users/index.mobile.slim
@@ -1,38 +1,39 @@
-.type-home data-role="page"
+.type-interior data-role="page" 
 
-  .foo data-role="header"
+  .foo data-role="header" data-theme="f"
     h1 Users
     = link_to 'home', root_path
-  
-  
+
   .foo data-role="content"
-    .content-secondary
-      #jqm-homeheader
-        h1 id="jqm-logo"
-          =image_tag('jquery-logo.png')
-      p Users
-      p class='intro'
-        strong Test list. &nbsp;
-        'Manage lists
-
-
-
-
     .content-primary
-      h2 Find
-      = form_tag users_path, :method => 'get', :id => "products_search" do
-        = text_field_tag :search, params[:search] 
-        '&nbsp;
-        = submit_tag t('system.search'), :name => nil, :class => 'btn primary'
-        '&nbsp;
-        = link_to t('system.show_all'), users_path, :class => 'btn'
-      ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="f"
-        li data-role="list-divider"
-          'Users
-        - @users.each do |user|
-          li = link_to user.name, user
-                
-              
+        h2 Find
+        = form_tag users_path, :method => 'get', :id => "products_search" do
+          = text_field_tag :search, params[:search] 
+          '&nbsp;
+          = submit_tag t('system.search'), :name => nil, :class => 'btn primary'
+          '&nbsp;
+          = link_to t('system.show_all'), users_path, :class => 'btn'
+        /ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="f"
+        /  li data-role="list-divider"
+        /    'Users
+        /  - @users.each do |user|
+        /    li = link_to user.name, user
+                  
+        ul data-role="listview"
+          - @users.each do |user|
+            li = link_to user.name, user
+
+
+
+
+
+
+
+
+
+
+
+
         /= paginate @users
 
     
