--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,5 +1,3 @@
-
-
 = simple_form_for @user, :validate => true do |f| 
   .container
     .content.top-void
@@ -7,9 +5,16 @@
       .page-header
         h1 Sign up <small>Join the club</small> 
       .row
-        .span6
+        .span4
           h3 Role based user management
           'Althoug the site is tiny it has the features needed by a community site. different users can have different roles
+          - if @user.image?
+            ul class="media-grid"
+              li =link_to image_tag((@user.image_url :large), :class =>"thumbnail"), '#'
+            -if can_edit?
+              .pull-right
+                = link_to t('image.re_crop'), crop_user_path(@user, :version => :large)
+            br
       
         .span10
           fieldset
@@ -43,6 +48,6 @@
                   = f.input :role , :include_blank => false, :label => false , :collection => User::ROLES
           /br
           .actions
-            = f.submit t('system.save'), :class =>"btn primary"
-            '&nbsp;
             = link_to 'cancel', :back, :class =>"btn"
+            '&nbsp;
+            = f.submit t('system.save'), :class =>"btn primary"
