--- a/app/views/users/show.mobile.slim
+++ b/app/views/users/show.mobile.slim
@@ -1,4 +1,9 @@
-- if @user.image?
+.type-interior data-role="page"
+  .foo data-role="header" data-theme="f"
+    h1 =@user.name
+    = link_to 'home', posts_path, :'data-icon' =>"home", :'data-iconpos'=>"notext", :'data-direction'=>"reverse", :class=>"ui-btn-right jqm-home"
+    
+
 
   = image_tag(@user.image_url :large)
 
