--- a/app/views/kaminari/_first_page.html.slim
+++ b/app/views/kaminari/_first_page.html.slim
@@ -1,3 +1,12 @@
-span class="first"
-  = link_to_unless current_page.first?, raw(t 'views.pagination.first'), url, :remote => remote
+/ Link to the "First" page
+  - available local variables
+    url          : url to the first page
+    current_page : a page object for the currently displayed page
+    num_pages    : total number of pages
+    per_page     : number of items to fetch per page
+    remote       : data-remote
+-if current_page.first?
+  li class='disabled' = link_to raw(t 'views.pagination.first'),'#', :remote => remote
+-else
+  li = link_to raw(t 'views.pagination.first'), url, :remote => remote
 
