--- a/app/views/kaminari/_first_page.html.slim
+++ b/app/views/kaminari/_first_page.html.slim
@@ -1,12 +1,7 @@
-/ Link to the "First" page
-  - available local variables
-    url          : url to the first page
-    current_page : a page object for the currently displayed page
-    num_pages    : total number of pages
-    per_page     : number of items to fetch per page
-    remote       : data-remote
 -if current_page.first?
-  li class='disabled' = link_to raw(t 'views.pagination.first'),'#', :remote => remote
+  li class='disabled' 
+    = link_to raw(t 'views.pagination.first'),'#', :remote => remote
 -else
-  li = link_to raw(t 'views.pagination.first'), url, :remote => remote
+  li 
+    = link_to raw(t 'views.pagination.first'), url, :remote => remote
 
