--- a/app/views/posts/show.mobile.slim
+++ b/app/views/posts/show.mobile.slim
@@ -1,7 +1,7 @@
 .type-interior data-role="page"
   .foo data-role="header" data-theme="f"
-    h1 Post
-    = link_to 'home', root_path, :'data-icon' =>"home", :'data-iconpos'=>"notext", :'data-direction'=>"reverse", :class=>"ui-btn-right jqm-home"
+    h1 Posts
+    = link_to 'home', root_path, :'data-icon' =>"home", :'data-iconpos'=>"notext", :'data-direction'=>"reverse", :class=>"ui-btn-left jqm-home"
     
 
   .foo data-role="content"
