soundmanager2 conflict with jquery mobile

--- a/app/views/audio_tracks/index.html.slim
+++ b/app/views/audio_tracks/index.html.slim
@@ -11,7 +11,7 @@
   #sm2-container
 
   
-  ul class="graphic
+  ul class="graphic"
     - @audio_tracks.each do |audio_track|
       li = link_to audio_track.title, audio_track.audio_file_url
 
