--- a/app/views/layouts/application.mobile.slim
+++ b/app/views/layouts/application.mobile.slim
@@ -5,7 +5,12 @@ html
     = csrf_meta_tag
     = stylesheet_link_tag 'jquery-mobile-1.0'
     = stylesheet_link_tag 'jqm-docs'
+    = stylesheet_link_tag 'inlineplayer'
+
     = javascript_include_tag 'mobile'
+    /= javascript_include_tag '01_soundmanager2-nodebug-jsmin'
+    /= javascript_include_tag '02_inlineplayer'
+
 
 
     meta name="viewport" content="width=device-width, initial-scale=1"
