updated rails from 3.1 to 3.2

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -31,10 +31,10 @@
     .span10
       .row
         .span5
-          h3 Ruby on Rails
+          h3 Ruby on Rails 3.2
           'Ruby on Rails is a breakthrough in lowering the barriers of entry to programming. Powerful web applications that formerly might have taken weeks or months to develop can be produced in a matter of days.
           br
-          'This project is a starting point for a websites. It's based on Rails 3.1 and 
+          'This project is a starting point for a websites. It's based on Rails 3.2 and 
           = link_to 'Bootstrap', 'http://twitter.github.com/bootstrap/', :rel=>'twipsy', :title=>'Nice tooltip'
           '&nbsp;from twitter.
           br
